--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -88,6 +88,8 @@ li {
 .details {
   font-size: 16px;
   margin-bottom: 14px;
+  margin-top: 14px;
+  line-height: 25px;
 }
 
 .reserve-btn {
@@ -97,6 +99,12 @@ li {
   border-radius: 6px;
   padding: 12px;
   font-size: 16px;
+}
+
+.reserved-btn {
+  color: rgb(62, 62, 62);
+  background-color: #fff;
+  border: 1px solid black;
 }
 
 .img img {
@@ -109,4 +117,13 @@ li {
   border-radius: 8px;
   padding: 12px;
   margin: 220px 190px 20px 190px;
+}
+
+.reserved {
+  background-color: #05abb4e4;
+  padding: 6px;
+  margin-right: 12px;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 6px;
 }
