--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -68,7 +68,7 @@ li {
   margin: 20px 150px 0 120px;
 }
 
-.rocket {
+.rocket-container {
   display: flex;
 }
 
@@ -106,7 +106,7 @@ li {
   border: 1px solid black;
 }
 
-.img img {
+.rocket-image img {
   width: 300px;
   height: 200px;
   margin: 10px 0 10px 0;
@@ -121,8 +121,8 @@ li {
 
 .reserved {
   background-color: #05abb4e4;
-  padding: 6px;
-  margin-right: 12px;
+  padding: 8px;
+  margin-right: 6px;
   color: #fff;
   font-size: 16px;
   border-radius: 6px;
